--- a/package.json
+++ b/package.json
@@ -36,48 +36,48 @@
   },
   "homepage": "",
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.0.0",
     "@spyke/conventional-changelog-preset": "^1.0.5",
-    "@types/chai": "^4.1.7",
+    "@types/chai": "^4.3.4",
     "@types/codemirror": "^0.0.70",
     "@types/enzyme": "^3.1.15",
     "@types/fixed-data-table": "^0.6.34",
-    "@types/lodash": "^4.14.118",
-    "@types/mocha": "^5.2.5",
+    "@types/lodash": "^4.14.190",
+    "@types/mocha": "^10.0.0",
     "@types/pegjs": "^0.10.1",
-    "@types/react": "^16.7.13",
+    "@types/react": "^18.0.25",
     "@types/react-day-picker": "^5.3.0",
-    "@types/react-dom": "^16.0.11",
-    "@types/sinon": "^5.0.7",
-    "babel-loader": "^8.2.4",
+    "@types/react-dom": "^18.0.9",
+    "@types/sinon": "^10.0.13",
+    "babel-loader": "^9.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "chai": "^4.2.0",
+    "chai": "^4.3.7",
     "conventional-changelog-cli": "^2.2.2",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.7.0",
+    "enzyme": "^3.11.0",
     "fixed-data-table": "^0.6.5",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^20.0.0",
+    "jsdom": "^20.0.3",
     "jsdom-global": "^3.0.2",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "mocha": "^10.0.0",
-    "pegjs-loader": "^0.5.4",
-    "react-day-picker": "^5.3.0",
-    "react-hot-loader": "^4.3.12",
-    "react-test-renderer": "^16.6.3",
-    "sinon": "^7.1.1",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.2.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "mocha": "^10.1.0",
+    "pegjs-loader": "^0.5.6",
+    "react-day-picker": "^8.3.7",
+    "react-hot-loader": "^4.13.1",
+    "react-test-renderer": "^18.2.0",
+    "sinon": "^14.0.2",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
-    "tslint": "^5.17.0",
-    "typescript": "^3.2.1",
-    "webpack": "5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "4.9.3",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
