--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@types/mocha": "^10.0.0",
     "@types/pegjs": "^0.10.1",
     "@types/react": "^18.0.25",
-    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^18.0.9",
     "@types/sinon": "^10.0.13",
     "babel-loader": "^9.1.0",
@@ -91,6 +90,7 @@
   "resolutions": {
     "set-value": "2.0.1",
     "mixin-deep": "1.3.2",
-    "minimist": "1.2.6"
+    "minimist": "1.2.6",
+    "loader-utils": "2.0.4"
   }
 }
