--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "set-value": "2.0.1",
     "mixin-deep": "1.3.2",
     "minimist": "1.2.6",
-    "loader-utils": "2.0.4"
+    "loader-utils": "2.0.4",
+    "webpack-dev-server/**/express": "4.21.1"
   }
 }
