chore: replaces react-refresh with @pmmmwh/react-refresh-webpack-plugin

--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    ["react-refresh/babel", { "skipEnvCheck": true }]
   ],
   "env": {
     "production": {
