--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@babel/core": "^7.27.3",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@spyke/conventional-changelog-preset": "^1.0.5",
     "@types/chai": "^4.3.4",
     "@types/codemirror": "^0.0.70",
@@ -65,7 +67,7 @@
     "mocha": "^11.0.1",
     "pegjs-loader": "^0.5.6",
     "react-day-picker": "^8.3.7",
-    "react-hot-loader": "^4.13.1",
+    "react-refresh": "^0.17.0",
     "react-test-renderer": "^18.2.0",
     "sinon": "^15.2.0",
     "style-loader": "^3.3.3",
